Interpreter versión 1.1, primera edición